@@ -1,0 +1,18 @@
+/**
+ * Zollern Galaxy by @author Zollern Wolf
+ * Copyright 2016 - 2025
+ * You may use this code to learn from,
+ * but do not claim it as your own, and
+ * do not redistribute it.
+ */
+package zollerngalaxy.blocks.corrupted;
+
+import zollerngalaxy.blocks.ZGBlockOre;
+
+public class ZGBlockOreCorrupted extends ZGBlockOre implements ICorruptBlock {
+	
+	public ZGBlockOreCorrupted(String blockName, float hardResist) {
+		super(blockName, hardResist);
+	}
+	
+}
