@@ -1,0 +1,19 @@
+/**
+ * Zollern Galaxy by @author Zollern Wolf
+ * Copyright 2016 - 2025
+ * You may use this code to learn from,
+ * but do not claim it as your own, and
+ * do not redistribute it.
+ */
+package zollerngalaxy.blocks.corrupted;
+
+import net.minecraft.item.Item;
+import zollerngalaxy.blocks.ZGOreGem;
+
+public class ZGOreGemCorrupted extends ZGOreGem implements ICorruptBlock {
+	
+	public ZGOreGemCorrupted(String blockName, float hardResist, Item gemItem) {
+		super(blockName, hardResist, gemItem);
+	}
+	
+}
