@@ -1,0 +1,19 @@
+/**
+ * Zollern Galaxy by @author Zollern Wolf
+ * Copyright 2016 - 2025
+ * You may use this code to learn from,
+ * but do not claim it as your own, and
+ * do not redistribute it.
+ */
+package zollerngalaxy.blocks.corrupted;
+
+import net.minecraft.block.Block;
+import zollerngalaxy.blocks.ZGPlanetStone;
+
+public class ZGPlanetStoneCorrupted extends ZGPlanetStone implements ICorruptBlock {
+	
+	public ZGPlanetStoneCorrupted(String blockName, Block blockDropped) {
+		super(blockName, blockDropped);
+	}
+	
+}
