@@ -3,104 +3,105 @@ package zollerngalaxy.mobs.models;
 import net.minecraft.client.model.ModelBiped;
 import net.minecraft.client.model.ModelRenderer;
 import net.minecraft.entity.Entity;
-import net.minecraft.entity.monster.EntityZombie;
-import net.minecraft.util.math.MathHelper;
 
+/**
+ * Made by @author DabbingEevee.
+ */
 public class ModelKrull extends ModelBiped {
 	
-	public int heldItemLeft;
-	public int heldItemRight;
-	public boolean isSneak;
-	public boolean aimedBow;
-	
-	public static ModelRenderer bipedHead;
-	public static ModelRenderer bipedBody;
-	public static ModelRenderer bipedRightArm;
-	public static ModelRenderer bipedLeftArm;
-	public static ModelRenderer bipedRightLeg;
-	public static ModelRenderer bipedLeftLeg;
+	private final ModelRenderer Head;
+	private final ModelRenderer Body;
+	private final ModelRenderer RightArm;
+	private final ModelRenderer LeftArm;
+	private final ModelRenderer RightLeg;
+	private final ModelRenderer LeftLeg;
+	private final ModelRenderer MouthFlapTop;
+	private final ModelRenderer MouthFlapBottom;
+	private final ModelRenderer MouthFlapLeft;
+	private final ModelRenderer MouthFlapRight;
 	
 	public ModelKrull() {
 		textureWidth = 64;
 		textureHeight = 64;
-		bipedHead = new ModelRenderer(this, 0, 0);
-		bipedHead.addBox(-4F, -8F, -4F, 8, 9, 8);
-		bipedHead.setRotationPoint(0F, -1F, 0F);
-		bipedHead.setTextureSize(64, 64);
-		bipedHead.mirror = true;
-		setRotation(bipedHead, 0F, 0F, 0F);
-		bipedBody = new ModelRenderer(this, 16, 16);
-		bipedBody.addBox(-4F, 0F, -2F, 8, 12, 4);
-		bipedBody.setRotationPoint(0F, 0F, 0F);
-		bipedBody.setTextureSize(64, 64);
-		bipedBody.mirror = true;
-		setRotation(bipedBody, 0F, 0F, 0F);
-		bipedRightArm = new ModelRenderer(this, 33, 16);
-		bipedRightArm.addBox(-3F, -2F, -2F, 5, 12, 4);
-		bipedRightArm.setRotationPoint(-6F, 2F, 0F);
-		bipedRightArm.setTextureSize(64, 64);
-		bipedRightArm.mirror = true;
-		setRotation(bipedRightArm, -1.53589F, 0F, 0F);
-		bipedLeftArm = new ModelRenderer(this, 40, 16);
-		bipedLeftArm.addBox(-1F, -2F, -2F, 5, 12, 4);
-		bipedLeftArm.setRotationPoint(5F, 2F, 0F);
-		bipedLeftArm.setTextureSize(64, 64);
-		bipedLeftArm.mirror = true;
-		setRotation(bipedLeftArm, -1.53589F, 0F, 0F);
-		bipedRightLeg = new ModelRenderer(this, 0, 16);
-		bipedRightLeg.addBox(-2F, 0F, -2F, 4, 12, 4);
-		bipedRightLeg.setRotationPoint(-2F, 12F, 0F);
-		bipedRightLeg.setTextureSize(64, 64);
-		bipedRightLeg.mirror = true;
-		setRotation(bipedRightLeg, 0F, 0F, 0F);
-		bipedLeftLeg = new ModelRenderer(this, 0, 16);
-		bipedLeftLeg.addBox(-2F, 0F, -2F, 4, 12, 4);
-		bipedLeftLeg.setRotationPoint(2F, 12F, 0F);
-		bipedLeftLeg.setTextureSize(64, 64);
-		bipedLeftLeg.mirror = true;
-		setRotation(bipedLeftLeg, 0F, 0F, 0F);
-	}
-	
-	@Override
-	public void setRotationAngles(float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch,
-			float scaleFactor, Entity entityIn) {
-		super.setRotationAngles(limbSwing, limbSwingAmount, ageInTicks, netHeadYaw, headPitch, scaleFactor, entityIn);
-		boolean flag = entityIn instanceof EntityZombie && ((EntityZombie) entityIn).isArmsRaised();
-		float f = MathHelper.sin(this.swingProgress * (float) Math.PI);
-		float f1 = MathHelper.sin((1.0F - (1.0F - this.swingProgress) * (1.0F - this.swingProgress)) * (float) Math.PI);
-		this.bipedRightArm.rotateAngleZ = 0.0F;
-		this.bipedLeftArm.rotateAngleZ = 0.0F;
-		this.bipedRightArm.rotateAngleY = -(0.1F - f * 0.6F);
-		this.bipedLeftArm.rotateAngleY = 0.1F - f * 0.6F;
-		float f2 = -(float) Math.PI / (flag ? 1.5F : 2.25F);
-		this.bipedRightArm.rotateAngleX = f2;
-		this.bipedLeftArm.rotateAngleX = f2;
-		this.bipedRightArm.rotateAngleX += f * 1.2F - f1 * 0.4F;
-		this.bipedLeftArm.rotateAngleX += f * 1.2F - f1 * 0.4F;
-		this.bipedRightArm.rotateAngleZ += MathHelper.cos(ageInTicks * 0.09F) * 0.05F + 0.05F;
-		this.bipedLeftArm.rotateAngleZ -= MathHelper.cos(ageInTicks * 0.09F) * 0.05F + 0.05F;
-		this.bipedRightArm.rotateAngleX += MathHelper.sin(ageInTicks * 0.067F) * 0.05F;
-		this.bipedLeftArm.rotateAngleX -= MathHelper.sin(ageInTicks * 0.067F) * 0.05F;
+		
+		Head = new ModelRenderer(this);
+		Head.setRotationPoint(0.0F, 2.0F, 0.0F);
+		Head.setTextureOffset(0, 0);
+		Head.addBox(-4.0F, -18.0F, -4.0F, 8, 8, 8);
+		
+		Body = new ModelRenderer(this);
+		Body.setRotationPoint(0.0F, 0.0F, 0.0F);
+		Body.setTextureOffset(32, 32);
+		Body.addBox(-4.0F, -8.0F, -2.0F, 8, 12, 4);
+		
+		RightArm = new ModelRenderer(this);
+		RightArm.setRotationPoint(-5.0F, 2.0F, 0.0F);
+		RightArm.setTextureOffset(0, 40);
+		RightArm.addBox(-3.0F, -10.0F, -2.0F, 4, 16, 4);
+		RightArm.setTextureOffset(48, 0);
+		RightArm.addBox(-6.0F, -9.0F, -0.5F, 3, 13, 1);
+		
+		LeftArm = new ModelRenderer(this);
+		LeftArm.setRotationPoint(5.0F, 2.0F, 0.0F);
+		LeftArm.setTextureOffset(32, 0);
+		LeftArm.addBox(-1.0F, -10.0F, -2.0F, 4, 16, 4);
+		LeftArm.setTextureOffset(48, 48);
+		LeftArm.addBox(3.0F, -9.0F, -0.5F, 3, 13, 1);
+		
+		RightLeg = new ModelRenderer(this);
+		RightLeg.setRotationPoint(-1.9F, 12.0F, 0.0F);
+		RightLeg.setTextureOffset(16, 16);
+		RightLeg.addBox(-2.0F, -8.0F, -2.0F, 4, 20, 4);
+		RightLeg.setTextureOffset(48, 20);
+		RightLeg.addBox(1.9F, 5.0F, -3.0F, 4, 5, 1);
+		RightLeg.setTextureOffset(48, 14);
+		RightLeg.addBox(-2.0F, 5.0F, -3.0F, 4, 5, 1);
+		
+		LeftLeg = new ModelRenderer(this);
+		LeftLeg.setRotationPoint(1.9F, 12.0F, 0.0F);
+		LeftLeg.setTextureOffset(0, 16);
+		LeftLeg.addBox(-2.0F, -8.0F, -2.0F, 4, 20, 4);
+		
+		MouthFlapTop = new ModelRenderer(this);
+		MouthFlapTop.setRotationPoint(0.0F, -16.0F, -4.0F);
+		MouthFlapTop.setTextureOffset(32, 48);
+		MouthFlapTop.addBox(-4.0F, -8.0F, 0.0F, 8, 8, 0);
+		
+		MouthFlapBottom = new ModelRenderer(this);
+		MouthFlapBottom.setRotationPoint(0.0F, -8.0F, -4.0F);
+		MouthFlapBottom.setTextureOffset(16, 48);
+		MouthFlapBottom.addBox(-4.0F, 0.0F, 0.0F, 8, 8, 0);
+		
+		MouthFlapLeft = new ModelRenderer(this);
+		MouthFlapLeft.setRotationPoint(4.0F, -12.0F, -4.0F);
+		MouthFlapLeft.setTextureOffset(32, 20);
+		MouthFlapLeft.addBox(0.0F, -4.0F, 0.0F, 8, 8, 0);
+		
+		MouthFlapRight = new ModelRenderer(this);
+		MouthFlapRight.setRotationPoint(-4.0F, -12.0F, -5.0F);
+		MouthFlapRight.setTextureOffset(16, 40);
+		MouthFlapRight.addBox(-8.0F, -4.0F, 1.0F, 8, 8, 0);
 	}
 	
 	@Override
 	public void render(Entity par1Entity, float par2, float par3, float par4, float par5, float par6, float par7) {
 		super.render(par1Entity, par2, par3, par4, par5, par6, par7);
 		setRotationAngles(par2, par3, par4, par5, par6, par7, par1Entity);
-		bipedHead.render(par7);
-		bipedBody.render(par7);
-		bipedHead.render(par7);
-		bipedBody.render(par7);
-		bipedRightArm.render(par7);
-		bipedLeftArm.render(par7);
-		bipedRightLeg.render(par7);
-		bipedLeftLeg.render(par7);
+		Head.render(par7);
+		Body.render(par7);
+		RightArm.render(par7);
+		LeftArm.render(par7);
+		RightLeg.render(par7);
+		LeftLeg.render(par7);
+		MouthFlapTop.render(par7);
+		MouthFlapBottom.render(par7);
+		MouthFlapLeft.render(par7);
+		MouthFlapRight.render(par7);
 	}
 	
-	private void setRotation(ModelRenderer model, float x, float y, float z) {
-		model.rotateAngleX = x;
-		model.rotateAngleY = y;
-		model.rotateAngleZ = z;
+	public void setRotationAngle(ModelRenderer modelRenderer, float x, float y, float z) {
+		modelRenderer.rotateAngleX = x;
+		modelRenderer.rotateAngleY = y;
+		modelRenderer.rotateAngleZ = z;
 	}
-	
 }
