@@ -1,0 +1,3 @@
+{
+  "parent": "zollerngalaxy:block/corruptetriumore"
+}
